--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -1,6 +1,16 @@
+#spring.datasource.url=jdbc:postgresql://localhost:5432/test-db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgre
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/test-db
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=postgre
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
