remaned person on user

--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
