--- a/aviasales2/pom.xml
+++ b/aviasales2/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -35,6 +40,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
