--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.datasource.password=Pa$$w0rd
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-server.ssl.enabled=false
-server.port=8443
-server.ssl.key-alias:selfsigned_localhost_sslserver
-server.ssl.key-password:changeit
-server.ssl.key-store:src/main/resources/ssl-server.jks
-server.ssl.key-store-provider:SUN
-server.ssl.key-store-type:JKS
+
+!server.ssl.enabled=false
+!server.port=8443
+!server.ssl.key-alias:selfsigned_localhost_sslserver
+!server.ssl.key-password:changeit
+!server.ssl.key-store:src/main/resources/ssl-server.jks
+!server.ssl.key-store-provider:SUN
+!server.ssl.key-store-type:JKS
