--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/aviasales
+spring.datasource.url=jdbc:postgresql://localhost:5432/TestBD
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=Pa$$w0rd
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8090
+server.port=8080
 
 #server.port=8443
 #server.ssl.key-alias=aviasales2
