https and fix wallet confirm

--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.password=Pa$$w0rd
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-
-#server.port=8443
-#server.ssl.key-alias=aviasales2
-#server.ssl.key-store-type=JKS
-#server.ssl.key-password=password
-#server.ssl.key-store=classpath:aviasales2.jks
+server.ssl.enabled=true
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-password=123456
+server.ssl.key-store-password=123456
+server.ssl.key-alias=tomcat
