--- a/aviasales2/src/main/resources/application.properties
+++ b/aviasales2/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/company2 
+spring.datasource.url=jdbc:postgresql://localhost:5432/aviasales2
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=123
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.ssl.enabled=true
+#spring.jpa.hibernate.ddl-auto = create-drop
 server.port=8443
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store = classpath:keystore.p12
